Remove example_usage_notebook.ipynb as it is no longer needed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
   "python.analysis.extraPaths": [
     ".."
   ],
-  "python.envFile": "${workspaceFolder}/.env"
+  "python.envFile": "${workspaceFolder}/.env",
+  "cursorpyright.analysis.extraPaths": [
+    ".."
+  ]
 }
 
 
